--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,21 @@
 {
     "name": "dvs-bundle/config",
-    "description": "Config bundle(Sonata admin)",
+    "description": "Config bundle (Sonata admin)",
     "keywords": ["config"],
     "type": "symfony-bundle",
     "license": "MIT",
     "require": {
         "php": ">=7.0",
-        "doctrine/doctrine-bundle": "^1.6",
-        "stof/doctrine-extensions-bundle": "^1.2",
+        "symfony/symfony": "~3.3.0",
         "doctrine/orm": "^2.5",
-        "friendsofphp/php-cs-fixer": "^2.8"
+        "sonata-project/admin-bundle": "^3.31",
+        "stof/doctrine-extensions-bundle": "^1.2",
+        "doctrine/doctrine-bundle": "^1.6",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
-        "phpspec/phpspec": "^4.0"
+        "phpspec/phpspec": "^4.3",
+        "friendsofphp/php-cs-fixer": "^2.10"
     },
     "autoload": {
         "psr-4": {
